--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-.DS_Store
-.RDataTmp
-Fig/
-intermediate_figs/
-processed_data/
+*.Rproj.user
+*.Rhistory
+*.RData
+*.Ruserdata
+*.DS_Store
+*.RDataTmp
+*.Rproj
+*Fig/
+*intermediate_figs/
+*processed_data/
