--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-*.Rproj.user
-*.Rhistory
-*.RData
-*.Ruserdata
-*.DS_Store
-*.RDataTmp
-*.Rproj
-*Fig/
-*intermediate_figs/
-*processed_data/
+.Rproj.user
+.Rhistory
+.RData
+.Ruserdata
+.DS_Store
+.RDataTmp
+.Rproj
+.Fig/.
+.intermediate_figs/.
+.processed_data/.
