--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 __pycache__/
 
 # jupyter files
-# .virtual_documents
-# .ipynb_checkpoints
+.virtual_documents
+.ipynb_checkpoints
 
 # figs & intermediate files
 Fig
